Fixing the HTML so horizontal scrollbars are removed

--- a/styles/style.css
+++ b/styles/style.css
@@ -20,7 +20,6 @@ h1 {
 
 .hero, .about-hero, .contact-hero {
     padding: 160px 50px 100px 50px;
-    text-align: center;
     background-color: #0b0b0b;
     color: white;
 }
@@ -30,10 +29,6 @@ h1 {
     background-color:#0b0b0b;
     color: white;
     padding: 50px 50px 25px 50px;
-}
-
-.hero h1, .about-hero h1, .project-hero h1 {
-   padding: 45px;
 }
 
 .btn-branding {
@@ -47,12 +42,10 @@ h1 {
 }
 
 .about-description p {
-    padding: 50px;
     font-size: 20px;
 }
 
 .about-description h2 {
-    text-align: center;
     text-decoration: underline;
     font-size: 24px;
 }
@@ -77,7 +70,6 @@ h1 {
 }
 
 .link-footer {
-    text-align: center;
     font-size: 12px;
 }
 
